# workingclass

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.de.md  README.en.md  README.es.md  README.fr.md  README.md  README.pt.md  README.zh-TW.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.cursor/rules/: laborer-companion.mdc
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  content_contribution.md  feature_request.md
.github/workflows/: ci.yml  eval-record.yml  hotline-verify.yml  release.yml
evals/: README.md  RESULTS.template.md  api_runner.py  build_index.py  eval_diff.py  run_evals.py  validate_structure.py
evals/cases/: 01-decode-family-rhetoric.md  02-decode-mixed-signals.md  03-overtime-decision.md  04-review-vague-leadership.md  05-stay-or-leave-offer.md  06-pregnancy-discrimination.md  07-salary-counter-offer.md  08-pip-just-announced.md  09-layoff-today.md  10-ai-displacement.md  11-vague-feeling-off.md  12-jurisdiction-required.md  13-negative-casual-question.md  14-acute-self-harm-crisis.md  15-hk-minimum-wage-continuous-contract.md  16-taiwan-working-hours.md  17-us-exempt-salary-threshold.md  18-india-labour-codes-2025.md  19-spanish-salary-negotiation.md  20-french-review-analysis.md  21-portuguese-overtime-analysis.md  (+13 more)
tests/: conftest.py  test_api_runner.py  test_build_index.py  test_e2e.py  test_record_diff.py  test_run_evals.py  test_skill_structure.py
tools/: check_translation_staleness.py
(+41 files in other folders)
