[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "workingclass-evals"
version = "0.1.0"
description = "Eval runner and structural validators for the laborer-companion skill."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
# This repo's "package" is a flat directory of scripts in evals/. We don't ship
# anything to PyPI — the project block exists so `pip install -e ".[dev]"` works
# in CI to pull pytest. Tell setuptools not to look for packages.
py-modules = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # Required only by the api-mode eval runner (`run_evals.py --api`); the
    # markdown-only stub-mode runner doesn't depend on it.
    "anthropic>=0.40",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["evals", "."]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "e2e: end-to-end tests that spawn subprocesses (slower)",
    "structure: structural validation of the skill corpus",
]

[tool.pyright]
include = ["evals", "tests"]
extraPaths = ["evals"]
reportMissingImports = "warning"

[tool.coverage.run]
source = ["evals"]
omit = ["evals/__pycache__/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
